# osmo-bsc

./: configure.ac
contrib/: jenkins.sh
include/osmocom/bsc/: bsc_msc_data.h  bsc_subscr_conn_fsm.h  bsc_subscriber.h  gsm_data.h  lchan_fsm.h
src/ipaccess/: Makefile.am  ipaccess-config.c
src/osmo-bsc/: Makefile.am  abis_nm.c  abis_rsl.c  assignment_fsm.c  bsc_subscr_conn_fsm.c  bsc_subscriber.c  bsc_vty.c  gsm_04_08_rr.c  gsm_08_08.c  handover_fsm.c  lchan_fsm.c  mgw_endpoint_fsm.c  net_init.c  osmo_bsc_bssap.c  osmo_bsc_main.c  osmo_bsc_msc.c  osmo_bsc_vty.c  pcu_sock.c
src/utils/: Makefile.am
tests/: Makefile.am  atlocal.in  nri_cfg.vty  testsuite.at
tests/abis/: Makefile.am
tests/bsc/: Makefile.am
tests/codec_pref/: Makefile.am
tests/gsm0408/: Makefile.am  gsm0408_test.c
tests/handover/: Makefile.am
tests/nanobts_omlattr/: Makefile.am
tests/subscr/: Makefile.am
